<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#4CAF50">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/icon_back" />

        <controlcenteros.com.minhson.mousescreenon.widgets.TextViewCherryBold
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/iv_back"
            android:gravity="center|left"
            android:paddingLeft="10dp"
            android:text="@string/settings"
            android:textColor="#fff"
            android:textSize="22sp" />
    </RelativeLayout>

    <controlcenteros.com.minhson.mousescreenon.widgets.TextViewCherryRegular
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center|left"
        android:paddingLeft="10dp"
        android:text="@string/settings_time"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/sb_change_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="left|center"
            android:layout_weight="1"
            android:progress="50" />

        <controlcenteros.com.minhson.mousescreenon.widgets.TextViewCherryRegular
            android:id="@+id/tv_time"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/time"
            android:textSize="24sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_off_sound"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <controlcenteros.com.minhson.mousescreenon.widgets.TextViewCherryRegular
            android:id="@+id/tv_off_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:paddingLeft="10dp"
            android:text="@string/off_sound"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/sw_off_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp" />
    </RelativeLayout>
</LinearLayout>