<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_show_mouse"
        android:gravity="center">

        <Switch
            android:id="@+id/sw_show_mouse"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/start"
            android:textColor="#fff"
            android:textSize="22sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_settings"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:background="@drawable/bg_setting_act">

            <ImageView
                android:id="@+id/iv_settings"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/icon_settings" />

            <controlcenteros.com.minhson.mousescreenon.widgets.TextViewCherryRegular
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/iv_settings"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:text="@string/settings"
                android:textColor="#fff"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_information"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:background="@drawable/bg_setting_act">

            <ImageView
                android:id="@+id/iv_notifi"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/icon_information" />

            <controlcenteros.com.minhson.mousescreenon.widgets.TextViewCherryRegular
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/iv_notifi"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:text="@string/information"
                android:textColor="#fff"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_share_facebook"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:background="@drawable/bg_setting_act">

            <ImageView
                android:id="@+id/iv_share_book"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/icon_share" />

            <controlcenteros.com.minhson.mousescreenon.widgets.TextViewCherryRegular
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/iv_share_book"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:text="@string/share"
                android:textColor="#fff"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_rate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:background="@drawable/bg_setting_act">

            <ImageView
                android:id="@+id/iv_rate"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/icon_rate" />

            <controlcenteros.com.minhson.mousescreenon.widgets.TextViewCherryRegular
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/iv_rate"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:text="@string/rate"
                android:textColor="#fff"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_uninstall"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:background="@drawable/bg_setting_act">

            <ImageView
                android:id="@+id/iv_uninstall"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/icon_uninstall" />

            <controlcenteros.com.minhson.mousescreenon.widgets.TextViewCherryRegular
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/iv_uninstall"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:text="@string/uninstall"
                android:textColor="#fff"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>